--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.1.2",
     "@material-ui/icons": "^3.0.1",
     "@material/menu": "^0.40.0",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-tabs": "^1.0.2",
@@ -13,6 +14,7 @@
     "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
+    "react-swipeable-views": "^0.13.0",
     "react-tabs": "^2.3.0"
   },
   "scripts": {
