--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-tabs": "^1.0.2",
     "react-dom": "^16.5.2",
+    "react-images": "^0.5.19",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
