--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.5.2",
     "react-images": "^0.5.19",
     "react-loadable": "^5.5.0",
+    "react-photo-gallery": "^6.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
     "react-swipeable-views": "^0.13.0",
