--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap-tabs": "^1.0.2",
     "react-dom": "^16.5.2",
     "react-grid-system": "^4.3.1",
+    "react-icons": "^3.2.2",
     "react-images": "^0.5.19",
     "react-images-upload": "^1.2.3",
     "react-loadable": "^5.5.0",
