--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "root1001",
+    "password": "12345678",
     "database": "photoshare",
     "host": "127.0.0.1",
     "dialect": "mysql"
