--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-images": "^0.5.19",
     "react-images-upload": "^1.2.3",
     "react-loadable": "^5.5.0",
+    "react-notifications": "^1.4.3",
     "react-photo-gallery": "^6.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
