--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-photo-gallery": "^6.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
+    "react-sticky-box": "^0.7.5",
     "react-swipeable-views": "^0.13.0",
     "react-tabs": "^2.3.0",
     "reactstrap": "^6.3.1"
