--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.1",
     "@material/menu": "^0.40.0",
     "axios": "^0.18.0",
+    "font-awesome": "^4.7.0",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
