--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-loadable": "^5.5.0",
     "react-notifications": "^1.4.3",
     "react-photo-gallery": "^6.2.1",
+    "react-responsive-carousel": "^3.1.43",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
     "react-sticky-box": "^0.7.5",
