--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,13 @@
     "react-icons": "^3.2.2",
     "react-images": "^0.5.19",
     "react-images-upload": "^1.2.3",
+    "react-infinite-scroller": "^1.2.2",
     "react-loadable": "^5.5.0",
     "react-notifications": "^1.4.3",
     "react-photo-gallery": "^6.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.3",
+    "react-scroll-up-button": "^1.6.4",
     "react-sticky-box": "^0.7.5",
     "react-swipeable-views": "^0.13.0",
     "react-tabs": "^2.3.0",
