--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-images": "^0.5.19",
     "react-images-upload": "^1.2.3",
     "react-infinite-scroller": "^1.2.2",
+    "react-jss": "^8.6.1",
     "react-loadable": "^5.5.0",
     "react-notifications": "^1.4.3",
     "react-photo-gallery": "^6.2.1",
