--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
+    "camelcase-keys": "^5.0.0",
     "cloudinary": "^1.11.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
