[add] post detail

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@material/menu": "^0.40.0",
     "axios": "^0.18.0",
     "font-awesome": "^4.7.0",
+    "moment": "^2.23.0",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
     "react": "^16.5.2",
@@ -16,11 +17,13 @@
     "react-dom": "^16.5.2",
     "react-grid-system": "^4.3.1",
     "react-icons": "^3.2.2",
+    "react-image-gallery": "^0.8.12",
     "react-images": "^0.5.19",
     "react-images-upload": "^1.2.3",
     "react-infinite-scroller": "^1.2.2",
     "react-jss": "^8.6.1",
     "react-loadable": "^5.5.0",
+    "react-moment": "^0.8.4",
     "react-notifications": "^1.4.3",
     "react-photo-gallery": "^6.2.1",
     "react-responsive": "^6.0.1",
@@ -31,6 +34,7 @@
     "react-sticky-box": "^0.7.5",
     "react-swipeable-views": "^0.13.0",
     "react-tabs": "^2.3.0",
+    "react-viewer": "^2.8.0",
     "reactstrap": "^6.3.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0"
