--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.1",
     "@material/menu": "^0.40.0",
     "axios": "^0.18.0",
+    "chance": "^1.0.18",
     "font-awesome": "^4.7.0",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
@@ -30,6 +31,7 @@
     "react-scroll-up-button": "^1.6.4",
     "react-sticky-box": "^0.7.5",
     "react-swipeable-views": "^0.13.0",
+    "react-table": "^6.8.6",
     "react-tabs": "^2.3.0",
     "reactstrap": "^6.3.1",
     "semantic-ui-css": "^2.4.1",
