[fix] change avatar UI

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 JWT_SECRET=ph0t0sh4r3
-CLOUDINARY_URL=cloudinary://273938438387898:t1srh7i9qmEUDQ4TDSS1Jav9Efg@uetphotoshare
+CLOUDINARY_URL=cloudinary://945494134236848:MinKHWxoQJuOraU-Cdd2byfqBxY@dyxwbzvpy
 PORT=3001
