--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.4",
     "debug": "~2.6.9",
     "dotenv": "^6.0.0",
+    "elasticsearch": "^15.2.0",
     "express": "^4.16.3",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.3.0",
